--- a/Intro-Ch2/Intro.tex
+++ b/Intro-Ch2/Intro.tex
@@ -176,41 +176,34 @@ Finally, the observed spectra from the \nueccnopinp and the \numu selections are
 \end{figure}
 
 \par The three $\nu_e$ selections developed in this work all provide strong input to the analysis. Figure~\ref{fig:intro:nueselections} shows the status of the box-cut \npsel (figure~\ref{fig:intro:nueselections:1eNp}), the BDT-based (figure~\ref{fig:intro:nueselections:1e0p}), and the BDT-based $\nu_e$ inclusive (figure~\ref{fig:intro:nueselections:inclusive}). \par The inclusive channel provides the analysis a tool with which to study the modeling of $\nu_e$ interactions, especially at higher energies, and provides a first validation even with the small dataset currently available. Moving forward, we are exploring ways to use this channel to quantitatively constrain high-energy $\nu_e$ modeling uncertainties.
-\par The 1$e$0$p$0$\pi$ channel obtains a purity of 49\% and, even though it currently primarily is sensitive to higher-energy $\nu_e$ interactions, provides a valuable validation of detector and modeling effects which can cause migration from the N$p$ to 0$p$ channel. 
+\par The 1$e$0$p$0$\pi$ channel obtains a purity of 49\% and, even though it currently primarily is sensitive to higher-energy $\nu_e$ interactions, provides a valuable validation of detector and modeling effects which can cause migration from the N$p$ to 0$p$ channel. A quantitative estimation of the impact of this channel is being performed.
+\par The \npsel channel, in the box-cut selection, achieves a $5-10$\% efficiency with a 73\%  purity for the cut-based  and a $5-15$\% efficiency with a 81\%  purity for the BDT-based selection. These selections lead to $\mathcal{O}$(10) expected MB-$\nu_e$ LEE signal events and $40-70$ intrinsic $\nu_e$ events for the full Run $1-4$ dataset. The final reconstructed energy distribution for the box-cut selection is shown in figure~\ref{fig:intro:nueselections:1eNp}. The box-cut selection's statistics-only sensitivity is $2.1-2.3\sigma$, depending on the test-statistic used. The low statistics of the predicted signals lead to significant fluctuations in the expected sensitivity, covering the range $1.5-3.1\sigma$. 
+ \emph{Given the efficiency and purity obtained with the BDT-based workflow, we expect a higher sensitivity compared to the cut-based workflow.  We are in the process of re-evaluating the BDT-based performance which will be reported in this note after higher statistics MC samples have been included, and a re-calibration of the calorimetry has been completed.} 
 
 \begin{figure}[ht] 
 \begin{center}
     \begin{subfigure}[b]{0.28\textwidth}
     \centering
     \includegraphics[width=1.00\textwidth]{1eNp/reco_e_01162020_box_RUN1.pdf}
-    \caption{\label{fig:intro:nueselections:1eNp}  $\nu_e$ 1$e$0$p$}
+    \caption{\label{fig:intro:nueselections:1eNp} box-cut $\nu_e$ 1$e$0$p$}
     \end{subfigure}
     \begin{subfigure}[b]{0.28\textwidth}
     \centering
     \includegraphics[width=1.00\textwidth]{1e0p/reco_e_01162020_RUN3_bgbdt.pdf}
-    \caption{\label{fig:intro:nueselections:1e0p} $\nu_e$ 1$e$0$p$}
+    \caption{\label{fig:intro:nueselections:1e0p} bdt-based $\nu_e$ 1$e$0$p$}
     \end{subfigure}
     \begin{subfigure}[b]{0.31\textwidth}
     \centering
     \includegraphics[width=1.00\textwidth]{introduction/nueinclusive.png}
-    \caption{\label{fig:intro:nueselections:inclusive} $\nu_e$ inclusive}
+    \caption{\label{fig:intro:nueselections:inclusive} BDT-based $\nu_e$ inclusive}
     \end{subfigure}
 \caption{\label{fig:intro:nueselections} }
 \end{center}
 \end{figure}
 
-\par As will be clear from section \ref{sec:nueselection:1eNp}, we have two workflows for our most sensitive channel (~\npsel): a cut-base selection and a BDT-based selection.  The \npsel channel achieves a $5-10$\% efficiency with a 73\%  purity for the cut-based  and a $5-15$\% efficiency with a 81\%  purity for the BDT-based selection. These selections lead to $\mathcal{O}$(10) expected MB-$\nu_e$ LEE signal events and $40-70$ intrinsic $\nu_e$ events for the full Run $1-4$ dataset. The final reconstructed energy distribution for the box-cut selection is shown in figure~\ref{fig:1eNp:box:RUN1:intro}. The box-cut selection's statistics-only sensitivity is $2.1-2.3\sigma$, depending on the test-statistic used. The low statistics of the predicted signals lead to significant fluctuations in the expected sensitivity, covering the range $1.5-3.1\sigma$. 
- \emph{Given the efficiency and purity obtained with the BDT-based workflow, we expect a higher sensitivity compared to the cut-based workflow.  We are in the process of re-evaluating the BDT-based performance which will be reported in this note after higher statistics MC samples have been included, and a re-calibration of the calorimetry has been completed.} 
 
-\begin{figure}[ht]
-\begin{center}
-\includegraphics[width=0.45\textwidth]{1eNp/reco_e_01162020_box_RUN1.pdf}
-\caption{\label{fig:1eNp:box:RUN1:intro}Box-cuts for \npsel channel.}
-\end{center}
-\end{figure}
-
-\par The analysis presented in this note is at a very mature state. A particular strength consists in the multiple sideband channels available to validate the simulation, reconstruction, and help constrain $\nu_e$ interaction uncertainties. A high statistics $\pi^0$ sideband (section~\ref{sec:controls:pi0}) provides confidence in the performance of the analysis' shower reconstruction. A high-quality inclusive contained $\nu_{\mu}$ selection shows good data-simulation agreement in both Run 1 and Run 3 and provides the input for the $\nu_{\mu}$ constraint which has the primary goal of reducing systematic uncertainties for low-energy $\nu_e$s. A primary estimation of the impact of the $\nu_{\mu}$ constraint shows a 50\% reduction in modeling uncertainties, though this is to be revisited by the time of the February collaboration meeting. Additionally, an inclusive $\nu_{\mu}$ selection (section~\ref{sec:nueselection:inclusive}) provides a valuable starting point for many possible final-state measurements which may become necessary to further validate the analysis as its review progresses. Finally, on the $\nu_e$ side, the three selections developed all provide valuable input to the analysis. The $\nu_e$ inclusive channel has demonstrated the ability to select a high-statistics sample of $\mathcal{O}$(300 events) which can provide a robust measurement of the intrinsic $\nu_e$ content of the BNB beam, particularly at higher energies. This measurement is essential in order to validate a potential claim of new physics at lower energy. Finally, the 1$e$0$p$0$\pi$ channel has matured significantly, leading to a 50\% pure selection which will be able to further constrain reconstruction and modeling uncertainties associated to proton reconstruction and N$p \rightarrow 0p$ event migration.
-
+\par A particular strength of this analysis consists in the multiple sideband channels available to validate the simulation, reconstruction, and help constrain $\nu_e$ interaction uncertainties. A high statistics $\pi^0$ sideband (section~\ref{sec:controls:pi0}) provides confidence in the performance of the analysis' shower reconstruction. A high-quality inclusive contained $\nu_{\mu}$ selection shows good data-simulation agreement in both Run 1 and Run 3 and provides the input for the $\nu_{\mu}$ constraint which has the primary goal of reducing systematic uncertainties for low-energy $\nu_e$s. A primary estimation of the impact of the $\nu_{\mu}$ constraint shows a 50\% reduction in modeling uncertainties, though this is to be revisited by the time of the February collaboration meeting. Additionally, an inclusive $\nu_{\mu}$ selection (section~\ref{sec:nueselection:inclusive}) provides a valuable starting point for many possible final-state measurements which may become necessary to further validate the analysis as its review progresses. 
+\par The full evaluation of systematics for this analysis has not yet been completed. Detector systematic samples available have been investigated and preliminarily show little impact on the selections (sec.~\ref{sec:systematics}) but have not yet been included in sensitivity calculations. The recent availability of an updated central-value simulation for \texttt{GENIE}, together with updated genie modeling uncertainties, will allow us to quantitatively measure the impact of these uncertainties, with and without sideband channel constraints, by the February collaboration meeting. In the meantime, sections~\ref{sec:systematics} and~\ref{sec:sensitivity} present the status of tools and methods used for the full evaluation of the analysis' sensitivity. Statistics-only sensitivity calculations are also presented, based on the box-cut \npsel described in this note.
 
 
 \newpage
