Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -447,7 +447,7 @@ Michel rejection & shr\_energy\_tot\_cali $>$ 0.07 GeV \\
 
 \subsubsection{Box cut selection}
 
-A box cut selection has been developed to select \zpsel events. The selection cuts are designed to target the main backgrounds.  The fiducial volume from the CC inclusive analysis \cite{bib:numuCCincl} has been implemented to reduce the backgrounds associated with dirt and single showers entering the fiducial volume.   Cosmic rejection includes the addition of cuts on CRT variables and on CosmicIP.  In order to remove muon neutrino and non-showering backgrounds, cuts on the shower profile and the number of sub-clusters in the shower are applied.  A second shower search for hits in the Y plane is used to remove events where the second shower of a pi0 may have initially been missed.  dE/dx is also used to remove pi0 backgrounds.  Two calculations are used, one which looks at the first 2 cm of the shower, and one which starts the calculation after 1 cm so that any hits from a low energy proton that may have been merged with the shower are not included in the calculation.
+A box cut selection has been developed to select \zpsel events. The selection cuts are designed to target the main backgrounds.  The fiducial volume from the CC inclusive analysis \cite{bib:numuCCincl} has been implemented to reduce the backgrounds associated with dirt and single showers entering the fiducial volume.   Cosmic rejection includes the addition of cuts on CRT variables and on CosmicIP.  In order to remove muon neutrino and non-showering backgrounds, cuts on the shower profile and the number of sub-clusters in the shower are applied.  A second shower search for hits on the Y plane is used to remove events where the second shower of a $\pi0$ may have initially been missed.  dE/dx is also used to remove $\pi0$ backgrounds.  Two calculations are used, one which looks at the first 2 cm of the shower, and one which starts the calculation after 1 cm so that any hits from a low energy proton that may have been merged with the shower are not included in the calculation.
 
 The \zpsel box cuts are summarized in table \ref{tab:1e0p:cutbased}.
 
